Denis Novikov - Done (need some additig)

--- a/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
@@ -58,98 +58,100 @@
 
     <section class="skills_block">
         <h2 class="skills_header">Skills</h2>
-        <p>I work in such programs as</p>
-        <div>
-            <img src="./images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
+        <p class="skills_description">I work in such programs as</p>
+        <div class="skills_item1">
+            <img class="adobe_images" src="./images/ps.svg" alt="Adobe Photoshop">
             <p class="skills_signature">Adobe<br>Photoshop</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
             </div>
         </div>
-        <div>
-            <img src="./images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
+        <div class="skills_item2">
+            <img class="adobe_images" src="./images/ai.svg" alt="Adobe Illustrator">
             <p class="skills_signature">Adobe<br>Illustrator</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" alt="empty star" class="stars">
+                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
             </div>
         </div>
-        <div>
-            <img src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
+        <div class="skills_item2">
+            <img class="adobe_images" src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
             <p class="skills_signature">Adobe<br>After Effects</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
             </div>
         </div>
-        <div>
-            <img src="./images/figma.svg" width="58" height="88" alt="Figma">
+        <div class="skills_item2">
+            <img class="figma_image" src="./images/figma.svg" width="58" height="88" alt="Figma">
             <p class="skills_signature">Figma</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" alt="empty star" class="last_star">
             </div>
         </div>
     </section>
 
     <section class="portfolio">
         <h2 id="portfolio">Portfolio</h2>
-        <div>
-            <img src="./images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
+        <div class="fashion-store">
+            <img class="portfolio_image" src="./images/woman.png" alt="Online fashion store - Homepage">
             <p>
                 <a class="portfolio_links" href="#" target="_blank">Online fashion store -<br>Homepage</a>
             </p>
         </div>
 
-        <div>
-            <img src="./images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
+        <div class="reebok-store">
+            <img class="portfolio_image" src="./images/reebok.png" alt="Reebok Store - Concep">
             <p>
                 <a class="portfolio_links" href="#" target="_blank">Reebok Store - Concept</a>
             </p>
         </div>
 
-        <div>
-            <img src="./images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
+        <div class="braun">
+            <img class="portfolio_image" src="./images/cam.png" alt="Braun Landing Page - Concept">
             <p>
                 <a class="portfolio_links" href="#" target="_blank">Braun Landing Page - Concept</a>
             </p>
         </div>
     </section>
 
-    <footer>
-        <h2 id="contacts">Contacts</h2>
-        <p>Want to know more or just chat?<br>You are welcome!</p>
-        <button name="button" class="button">Send message</button>
-        <div>
+    <footer class="footer-box">
+        <h2 class="contacts_header" id="contacts">Contacts</h2>
+        <p class="contacts-description">Want to know more or just chat?<br>You are welcome!</p>
+        <div class="button-box">
+            <button name="button" class="button">Send message</button>
+        </div>
+        <div class="links_box">
             <ul>
-                <li>
-                    <a href="#"><img src="./images/link.svg" width="40" height="40" alt="linkedin"></a>
+                <li class="follow-links">
+                    <a href="#"><img src="./images/link.svg" alt="linkedin"></a>
                 </li>
-                <li>
-                    <a href="#"><img src="./images/insta.svg" width="40" height="40" alt="instagram"></a>
+                <li class="follow-links">
+                    <a href="#"><img src="./images/insta.svg" alt="instagram"></a>
                 </li>
-                <li>
-                    <a href="#"><img src="./images/behance.svg" width="40" height="40" alt="behence"></a>
+                <li class="follow-links">
+                    <a href="#"><img src="./images/behance.svg" alt="behence"></a>
                 </li>
-                <li>
-                    <a href="#"><img src="./images/surface.svg" width="40" height="40" alt="linkedin"></a>
+                <li class="follow-links">
+                    <a href="#"><img src="./images/surface.svg" alt="linkedin"></a>
                 </li>
             </ul>
         </div>
-        <p>Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
+        <p class="footer_description">Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
 
