productly files added

--- a/students/motkaliuk_andrii/10_css_box_model/productly/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/index.html
@@ -5,11 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productly</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/reset.css">
 </head>
 
 <body>
+    <header>
+        <div class="emblem">
+            <img src="./images/logo.svg" alt="logo">
+        </div>
+        <nav class="navigation_list">
+            <ul>
+                <li class="navigation_item">Product</li>
+                <li class="navigation_item">Customer</li>
+                <li class="navigation_item">Pricing</li>
+                <li class="navigation_item">Resources</li>
+            </ul>
+        </nav>
+        <div class="sign_in_up">
+            <button class="button">Sign in</button>
+            <button class="button">Sign up</button>
 
+        </div>
+    </header>
+    <h1>HELLO</h1>
+    <h1>HELLO</h1>
+    <h1>HELLO</h1>
+    <h1>HELLO</h1>
+
+    <footer>
+        <div class="footer_icon">
+            <img src="./images/logo.svg" alt="logo">
+        </div>
+        <div class="quick_links">
+            <ul>
+                <li class="quick_links_item">About Us</li>
+                <li class="quick_links_item">Blog</li>
+                <li class="quick_links_item">Contacts</li>
+                <li class="quick_links_item">FAQ</li>
+            </ul>
+        </div>
+        <div class="legal_stuff">
+            <ul>
+                <li class="legal_stuff_item">Disclaimer</li>
+                <li class="legal_stuff_item">Financing</li>
+                <li class="legal_stuff_item">Privacy Policy</li>
+                <li class="legal_stuff_item">Terms of Service</li>
+            </ul>
+        </div>
+        <div class="input_place">
+            <h3 class="inpput_header">Knowing you're always on the best energy deal.</h3>
+            <input type="text" name="text_place" placeholder="Enter your phone Number">
+            <button class="footer_button">Sign up</button>
+        </div>
+
+    </footer>
 </body>
 
 </html>
