main page created

--- a/students/savchak_marharyta/02_html/index.html
+++ b/students/savchak_marharyta/02_html/index.html
@@ -8,7 +8,19 @@
 </head>
 
 <body>
+    <h1>Buisness Card</h1>
+    <img src="images/photo_2022-03-19_21-28-32.jpg" width="120" title="Margoshka" alt=" ">
+    <p>Hi! My name is Marharyta and <br>
+        you can get to know me with this site!</p>
 
+    <h2>Here you can find information about:</h2>
+
+    <ol>
+        <li><a href="#">Personal information</a></li>
+        <li><a href="#">Hobbies</a></li>
+        <li><a href="#">Friends</a></li>
+        <li><a href="#">Why Front End?</a></li>
+    </ol>
 </body>
 
 </html>
