--- a/students/savchak_marharyta/02_html/personal_info.html
+++ b/students/savchak_marharyta/02_html/personal_info.html
@@ -8,7 +8,17 @@
 </head>
 
 <body>
-
+    <h1>Personal Information</h1>
+    <h2>Name</h2>
+    <p>Savchak MArharyta</p>
+    <h2>Address</h2>
+    <p>714 Gulf Street
+        Westford, MA 01886</p>
+    <h2>Telephone number</h2>
+    <p>+0(59)-265-23-14</p>
+    <h2>Social media:</h2>
+    <p>Telegram: @something_here</p>
+    <p>Instagram: @lets_watch</p>
 </body>
 
 </html>
