meaning_of_friendship

--- a/students/savchak_marharyta/02_html/friends.html
+++ b/students/savchak_marharyta/02_html/friends.html
@@ -9,6 +9,15 @@
 
 <body>
     <h1> My FRIENDS</h1>
+    <h3>What friendship means to me?</h3>
+    <p>All of us have met lot's of people, but not every <br>
+        becomes a friend, not talking about best friends.<br>
+        So who actually does? It's, of course, people,<br>
+        who understand us, and if they cannot they try.<br>
+        True friendship goes through difficulties,emotions, <br>
+        sometimes opposite qualities and you both fight <br>
+        the problems, not each other.
+    </p>
 </body>
 
 </html>
