--- a/students/savchak_marharyta/02_html/friends.html
+++ b/students/savchak_marharyta/02_html/friends.html
@@ -18,6 +18,18 @@
         sometimes opposite qualities and you both fight <br>
         the problems, not each other.
     </p>
+    <h3>My Friends!</h3>
+
+    <div>
+        <h4>Михайло Коваль</h4>
+        <img src="images/4bc09efe415085e116fa28afa2a17026.jpg" alt="" width="300" height="317.763">
+        <p> Age: 18<br>
+            Acquaintanceship: Since school<br>
+            Good sides: kind, openminded<br>
+            Bad sides: jealous,loves arueing<br>
+            Common interests: art<br>
+        </p>
+    </div>
 </body>
 
 </html>
