--- a/students/savchak_marharyta/02_html/friends.html
+++ b/students/savchak_marharyta/02_html/friends.html
@@ -30,6 +30,16 @@
             Common interests: art<br>
         </p>
     </div>
+    <div>
+        <h4>Настя Ткач</h4>
+        <img src="images/6L9huOv0Q1s.jpg" alt="" width="300" height="300">
+        <p> Age: 21<br>
+            Acquaintanceship: internet<br>
+            Good sides: sencere, generous<br>
+            Bad sides: mean<br>
+            Common interests: IT<br>
+        </p>
+    </div>
 </body>
 
 </html>
