--- a/students/savchak_marharyta/02_html/friends.html
+++ b/students/savchak_marharyta/02_html/friends.html
@@ -40,6 +40,16 @@
             Common interests: IT<br>
         </p>
     </div>
+    <div>
+        <h4>Ліліана Бойко</h4>
+        <img src="images/a23d0ab30c77cb0aca8fe81d40757c96.jpg" alt="" width="300" height="440">
+        <p> Age: 19<br>
+            Acquaintanceship: Online game<br>
+            Good sides: wierd, versatile<br>
+            Bad sides: don't tell about her feelings<br>
+            Common interests: anime<br>
+        </p>
+    </div>
 </body>
 
 </html>
