why_page_content

--- a/students/savchak_marharyta/02_html/why_front_end.html
+++ b/students/savchak_marharyta/02_html/why_front_end.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+    <h1>WHY FRONT END?</h1>
+    <p>Because i love doing sites and studing how they work.</p>
 </body>
 
 </html>
