--- a/students/savchak_marharyta/02_html/personal_info.html
+++ b/students/savchak_marharyta/02_html/personal_info.html
@@ -17,7 +17,7 @@
     <h2>Telephone number</h2>
     <p>+0(59)-265-23-14</p>
     <h2>Social media:</h2>
-    <p>Telegram: @something_here</p>
+    <p id="telegram">Telegram: @something_here</p>
     <p>Instagram: @lets_watch</p>
 </body>
 
