--- a/students/savchak_marharyta/02_html/friends.html
+++ b/students/savchak_marharyta/02_html/friends.html
@@ -31,7 +31,7 @@
         </p>
     </div>
     <div>
-        <h4>Настя Ткач</h4>
+        <h4 id="friend_2">Настя Ткач</h4>
         <img src="images/6L9huOv0Q1s.jpg" alt="" width="300" height="300">
         <p> Age: 21<br>
             Acquaintanceship: internet<br>
