personal_info_link

--- a/students/savchak_marharyta/02_html/index.html
+++ b/students/savchak_marharyta/02_html/index.html
@@ -16,7 +16,7 @@
     <h2>Here you can find information about:</h2>
 
     <ol>
-        <li><a href="personal_info.html#">Personal information</a></li>
+        <li><a href="personal_info.html#telegram">Personal information</a></li>
         <li><a href="#">Hobbies</a></li>
         <li><a href="#">Friends</a></li>
         <li><a href="#">Why Front End?</a></li>
