--- a/students/savchak_marharyta/02_html/index.html
+++ b/students/savchak_marharyta/02_html/index.html
@@ -18,7 +18,7 @@
     <ol>
         <li><a href="personal_info.html#telegram">Personal information</a></li>
         <li><a href="hobbies.html#end_of_page">Hobbies</a></li>
-        <li><a href="#">Friends</a></li>
+        <li><a href="friends.html#friend_2">Friends</a></li>
         <li><a href="#">Why Front End?</a></li>
     </ol>
 </body>
