--- a/students/savchak_marharyta/02_html/index.html
+++ b/students/savchak_marharyta/02_html/index.html
@@ -19,7 +19,7 @@
         <li><a href="personal_info.html#telegram">Personal information</a></li>
         <li><a href="hobbies.html#end_of_page">Hobbies</a></li>
         <li><a href="friends.html#friend_2">Friends</a></li>
-        <li><a href="#">Why Front End?</a></li>
+        <li><a href="why_front_end.html">Why Front End?</a></li>
     </ol>
 </body>
 
