--- a/students/motkaliuk_andrii/10_css_box_model/productly/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/index.html
@@ -8,59 +8,84 @@
     <title>Productly</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <div class="emblem">
-            <img src="./images/logo.svg" alt="logo">
-        </div>
-        <nav class="navigation_list">
-            <ul>
-                <li class="navigation_item">Product</li>
-                <li class="navigation_item">Customer</li>
-                <li class="navigation_item">Pricing</li>
-                <li class="navigation_item">Resources</li>
-            </ul>
-        </nav>
-        <div class="sign_in_up">
-            <button class="button">Sign in</button>
-            <button class="button">Sign up</button>
+    <div class="site_container">
+        <header class="header_container">
+            <div class="emblem">
+                <img src="./images/logo.svg" alt="logo">
+            </div>
+            <nav class="navigation_list">
+                <ul>
+                    <!-- <li><a class="navigation_item" href="#">Product</a></li>
+                    <li><a class="navigation_item" href="#">Customers</a></li>
+                    <li><a class="navigation_item" href="#">Pricing</a></li>
+                    <li><a class="navigation_item" href="#">Product</a></li> -->
+                    <li class="navigation_item">Product</li>
+                    <li class="navigation_item">Customers</li>
+                    <li class="navigation_item">Pricing</li>
+                    <li class="navigation_item">Resources</li>
+                </ul>
+            </nav>
+            <div class="sign_in_up">
+                <div class="sign_in">
+                    <button class="sign_in_button">Sign in</button>
+                </div>
+                <div class="sign_up">
+                    <button class="sign_up_button">Sign up</button>
+                </div>
 
-        </div>
-    </header>
-    <h1>HELLO</h1>
-    <h1>HELLO</h1>
-    <h1>HELLO</h1>
-    <h1>HELLO</h1>
+            </div>
+        </header>
+        <img src="./images/des_thinking.svg" alt="logo">
+        <img src="./images//design_prof.svg" alt="logo">
 
-    <footer>
-        <div class="footer_icon">
-            <img src="./images/logo.svg" alt="logo">
-        </div>
-        <div class="quick_links">
-            <ul>
-                <li class="quick_links_item">About Us</li>
-                <li class="quick_links_item">Blog</li>
-                <li class="quick_links_item">Contacts</li>
-                <li class="quick_links_item">FAQ</li>
-            </ul>
-        </div>
-        <div class="legal_stuff">
-            <ul>
-                <li class="legal_stuff_item">Disclaimer</li>
-                <li class="legal_stuff_item">Financing</li>
-                <li class="legal_stuff_item">Privacy Policy</li>
-                <li class="legal_stuff_item">Terms of Service</li>
-            </ul>
-        </div>
-        <div class="input_place">
-            <h3 class="inpput_header">Knowing you're always on the best energy deal.</h3>
-            <input type="text" name="text_place" placeholder="Enter your phone Number">
-            <button class="footer_button">Sign up</button>
-        </div>
 
-    </footer>
+        <footer>
+            <div class="footer_container">
+                <div class="footer_icon">
+                    <img src="./images/logo.svg" alt="logo">
+                </div>
+                <div class="quick_links_block">
+                    <h3 class="footer_headers">Quick Links</h3>
+                    <div class="quick_links">
+                        <ul>
+                            <li><a class="quick_links_item" href="#">About Us</a></li>
+                            <li><a class="quick_links_item" href="#">Blog</a></li>
+                            <li><a class="quick_links_item" href="#">Contacts</a></li>
+                            <li><a class="quick_links_item" href="#">FAQ</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="legal_stuff_block">
+                    <h3 class="footer_headers">Legal Stuff</h3>
+                    <div class="legal_stuff">
+                        <ul>
+                            <li><a class="legal_stuff_item" href="#">Disclaimer</a></li>
+                            <li><a class="legal_stuff_item" href="#">Financing</a></li>
+                            <li><a class="legal_stuff_item" href="#">Privacy Policy</a></li>
+                            <li><a class="legal_stuff_item" href="#">Terms of Service</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="input_place">
+                    <h3 class="footer_headers">Knowing you're always on <br>the best energy deal.</h3>
+                    <div class="input_space_box">
+                        <input class="input_space" type="text" name="text_place" placeholder="Enter your phone Number">
+                    </div>
+                    <div class="footer_button_box">
+                        <button class="footer_button">Sign up Now</button>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
