add code with css-selectors

--- a/students/umienchuk_oksana/09_css/index.html
+++ b/students/umienchuk_oksana/09_css/index.html
@@ -4,38 +4,226 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <title>Denis Novik</title>
 </head>
 
-<body class="body">
-    <header class="header">
-        <div class="container">
-            <nav class="nav">
-                <ul class="menu" id="menu">
-                    <li data-text="test" class="menu__item active">
-                        <a href="#home" class="menu__link">Home</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#aboutme" class="menu__link">About me</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#skills" class="menu__link">Skills</a>
-                    </li>
-                    <li class="menu__item active">
-                        <a href="#portfolio" class="menu__link">Portfolio</a>
-                    </li>
-                    <li class="menu__item">
-                        <a href="#contact" class="menu__link">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#About_me">About me</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Portfolio">Portfolio</a></li>
+                <li><a href="#Contacts">Contacts</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="one">
-        <div class="two"></div>
-    </div>
+    <main>
+        <!-- Hero -->
+        <h1>Denis Novik</h1>
+        <img src="./images/banner.jpg" alt="Banner with man" width="970">
+
+        <!-- Main block About me -->
+        <section>
+            <h2 id="About_me">About me</h2>
+            <div>
+                <p>
+                    Hi, I'm Denis – UX/UI designer from Minsk.<br>
+                    I'm interested in design and everything connected with it.
+                </p>
+                <p>
+                    I'm studying at courses "Web and mobile design<br>
+                    interfaces" in IT-Academy.
+                </p>
+                <p>
+                    Ready to implement excellent projects<br>
+                    with wonderful people.
+                </p>
+            </div>
+        </section>
+
+        <!-- Main block Skills -->
+        <section>
+            <h2 id="Skills">Skills</h2>
+            <p>I work in such programs as</p>
+
+            <!-- Skills block Adobe Photoshop -->
+            <div class="skills_item">
+                <section>
+                    <figure>
+                        <p><img src="./images/adobe-photoshop.svg" alt="Adobe Photoshop"></p>
+                        <figcaption>Adobe Photoshop</figcaption>
+                    </figure>
+                    <ul class="skills__list">
+                        <li>
+                            <img src="./images/star.svg" alt="First star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Second star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Third star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Fourth star">
+                        </li>
+                        <li>
+                            <img src="./images/star-light.svg" alt="Fifth star">
+                        </li>
+                    </ul>
+                </section>
+
+                <!-- Skills block Adobe Illustrator -->
+                <section>
+                    <figure>
+                        <p><img src="./images/adobe-illustrator.svg" alt="Adobe Illustrator"></p>
+                        <figcaption>Adobe Illustrator</figcaption>
+                    </figure>
+                    <ul class="skills__list">
+                        <li>
+                            <img src="./images/star.svg" alt="First star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Second star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Third star">
+                        </li>
+                        <li>
+                            <img src="./images/star-light.svg" alt="Fourth star">
+                        </li>
+                        <li>
+                            <img src="./images/star-light.svg" alt="Fifth star">
+                        </li>
+                    </ul>
+                </section>
+
+                <!-- Skills block Adobe After Effects -->
+                <section>
+                    <figure>
+                        <p><img src="./images/adobe-after-effects.svg" alt="Adobe After Effects"></p>
+                        <figcaption>Adobe After Effects</figcaption>
+                    </figure>
+                    <ul class="skills__list">
+                        <li>
+                            <img src="./images/star.svg" alt="First star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Second star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Third star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Fourth star">
+                        </li>
+                        <li>
+                            <img src="./images/star-light.svg" alt="Fifth star">
+                        </li>
+                    </ul>
+                </section>
+
+                <!-- Skills block Figma -->
+                <section>
+                    <figure>
+                        <p><img src="./images/figma.svg" alt="Figma"></p>
+                        <figcaption>Figma</figcaption>
+                    </figure>
+                    <ul class="skills__list">
+                        <li>
+                            <img src="./images/star.svg" alt="First star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Second star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Third star">
+                        </li>
+                        <li>
+                            <img src="./images/star.svg" alt="Fourth star">
+                        </li>
+                        <li>
+                            <img src="./images/star-light.svg" alt="Fifth star">
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </section>
+
+        <!-- Main block Portfolio -->
+        <section>
+            <h2 id="Portfolio">Portfolio</h2>
+
+            <!--  Portfolio about Online fashion store -->
+            <section>
+                <a href="#" target="_blank">
+                    <figure>
+                        <p><img src="./images/online-fashion-store.jpg" alt="Online fashion store - Homepage"
+                                width="970"></p>
+                        <figcaption class="site_link">Online fashion store - <br>
+                            Homepage</figcaption>
+                    </figure>
+                </a>
+            </section>
+
+            <!-- Portfolio about Reebok Store -->
+            <section>
+                <a href="#" target="_blank">
+                    <figure>
+                        <p><img src="./images/reebok-store.jpg" alt="Reebok Web" width="970"></p>
+                        <figcaption class="site_link">Reebok Store - Concept</figcaption>
+                    </figure>
+                </a>
+            </section>
+
+            <!-- Portfolio about Braun Landing Page -->
+            <section>
+                <a href="#" target="_blank">
+                    <figure>
+                        <p><img src="./images/braun.jpg" alt="Braun Web" width="970"></p>
+                        <figcaption class="site_link">Braun Landing Page - Concept</figcaption>
+                    </figure>
+                </a>
+            </section>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <h2 id="Contacts">Contacts</h2>
+        <p>
+            Want to know more or just chat? <br>
+            You are welcome!
+        </p>
+        <div>
+            <button type="button"><span>Send message</span></button>
+        </div>
+
+        <!-- Social network -->
+        <ul class="socials__list">
+            <li>
+                <a target="_blank" href="#"><img src="./images/logo-in.svg" alt="Logo linkedin"></a>
+            </li>
+            <li>
+                <a target="_blank" href="#"><img src="./images/logo-instagram.svg" alt="Logo instagram"></a>
+            </li>
+            <li>
+                <a target="_blank" href="#"><img src="./images/be.svg" alt="Logo Behance"></a>
+            </li>
+            <li>
+                <a target="_blank" href="#"><img src="./images/dribbble.svg" alt="Logo Dribbble"></a>
+            </li>
+        </ul>
+        <p>Like me on<br>
+            LinkedIn, Instagram, Behance, Dribble</p>
+    </footer>
 
 </body>
 
