--- a/students/kukuruza_maxim/09_css/index.html
+++ b/students/kukuruza_maxim/09_css/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../09_css/css/normalize.css">
-    <link rel="stylesheet" href="../09_css/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Denis Novik</title>
 </head>
 
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+            <ul class="menu clearfix">
+                <li class="menu__item"><a class="menu__link" href="#top">Home</a></li>
+                <li class="menu__item"><a class="menu__link" href="#about">About me</a></li>
+                <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
+                <li class="menu__item"><a class="menu__link" href="#portfolio">Portfolio</a></li>
+                <li class="menu__item"><a class="menu__link" href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,7 @@
             <h1>Denis Novik</h1>
             <img src="./img/hero-image.jpg" alt="hero-image">
         </section>
-        <section class="about-me">
+        <section id="about" class="about-me">
             <div class="content">
                 <h2>About me</h2>
                 <div class="description">
@@ -40,7 +40,7 @@
 
             </div>
         </section>
-        <section class="skills">
+        <section id="skills" class="skills">
             <div class="content">
                 <h2>Skills</h2>
                 <p>I work in such programs as</p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio">
+        <section id="portfolio" class="portfolio">
             <div class="content">
                 <div>
                     <h2>Portfolio</h2>
@@ -123,7 +123,7 @@
         </section>
     </main>
     <footer>
-        <div class="content">
+        <div id="contacts" class="content">
             <div class="footer-text">
                 <h2>Contacts</h2>
                 <p>Want to know more or just chat? <br>
