chaged names of img

--- a/students/kukuruza_maxim/08_css/index.html
+++ b/students/kukuruza_maxim/08_css/index.html
@@ -46,47 +46,47 @@
                 <p>I work in such programs as</p>
                 <div class="programs">
                     <div class="container">
-                        <img style="width: 90px;" src="./img/PS.svg" alt="Photoshop">
+                        <img style="width: 90px;" src="./img/ps.svg" alt="Photoshop">
                         <p>Adobe <br> Photoshop</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                     <div class="container">
-                        <img style="width: 90px;" src="./img/AI.svg" alt="Photoshop">
+                        <img style="width: 90px;" src="./img/ai.svg" alt="Photoshop">
                         <p>Adobe <br> Illustrator</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                     <div class="container">
-                        <img style="width: 90px;" src="./img/AE.svg" alt="Photoshop">
+                        <img style="width: 90px;" src="./img/ae.svg" alt="Photoshop">
                         <p>Adobe <br> After Effects</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                     <div class="container">
-                        <img style="width: 58px;" src="./img/Figma.svg" alt="Photoshop">
+                        <img style="width: 58px;" src="./img/figma.svg" alt="Photoshop">
                         <p>Figma</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                 </div>
