--- a/students/kukuruza_maxim/08_css/index.html
+++ b/students/kukuruza_maxim/08_css/index.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a class="" href="#">About me</a></li>
-                <li><a class="" href="#">Skills</a></li>
-                <li><a class="" href="#">Portfolio</a></li>
-                <li><a class="" href="#">Contacts</a></li>
+            <ul class="menu clearfix">
+                <li class="menu__item"><a class="menu__link" href="#top">Home</a></li>
+                <li class="menu__item"><a class="menu__link" href="#about">About me</a></li>
+                <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
+                <li class="menu__item"><a class="menu__link" href="#portfolio">Portfolio</a></li>
+                <li class="menu__item"><a class="menu__link" href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
