--- a/students/kukuruza_maxim/02_html/html/index.html
+++ b/students/kukuruza_maxim/02_html/html/index.html
@@ -1,36 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Max Kukuruza</title>
 </head>
+
 <body>
     <header>
-        
-        <h1 ><img class="img-me" src="../img/me.jpg" alt="">Max <br/> Kukuruza
+
+        <h1><img class="img-me" src="../img/me.jpg" alt="">Max <br /> Kukuruza
         </h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#top">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div id="About" class="description">
+        <div id="about" class="description">
             <div class="info">
                 <p>
-                    <b>Full Stack Software Developer with an enthusiasm for technologies, solving problems and helping others. </b><br> <br>
-                    • I am experienced in Full Stack Development using JavaScript, Node, Express, React, MongoDB and Firebase. <br>
-                    • I have a Proven Track record of delivering high quality project results to various employers and managers. <br>
-                    • I am a highly competent specialist with advanced technical and leadership training, skilled at motivating teams to perform at their best to accomplish organizational goals and vision.
+                    <b>Full Stack Software Developer with an enthusiasm for technologies, solving problems and helping
+                        others. </b><br> <br>
+                    • I am experienced in Full Stack Development using JavaScript, Node, Express, React, MongoDB and
+                    Firebase. <br>
+                    • I have a Proven Track record of delivering high quality project results to various employers and
+                    managers. <br>
+                    • I am a highly competent specialist with advanced technical and leadership training, skilled at
+                    motivating teams to perform at their best to accomplish organizational goals and vision.
+                </p>
+            </div>
+        </div>
+        <div id="work" class="description">
+            <div class="info">
+                <p>
+                    I'm a 16-year-old junior front-end web developer, eager to learn and create amazing online
+                    experiences. I'm passionate about coding and have been diving headfirst into the world of web
+                    development. Armed with a solid foundation in HTML, CSS, and JavaScript, I'm constantly expanding my
+                    knowledge and honing my skills. I love the challenge of bringing designs to life through clean and
+                    efficient code, and I'm always on the lookout for new technologies and trends. With a curious mind
+                    and a determination to grow, I'm excited to embark on this journey and make my mark in the digital
+                    realm.
+                </p>
+            </div>
+        </div>
+        <div id="contacts" class="description">
+            <div class="info">
+                <p>
+                    contact me via
+                <ul>
+                    <li>email: makskukuruza442@gmail.com</li>
+                    <li>telegram: @linkOfMyTg</li>
+                    <li>phone:+380123456789</li>
+                </ul>
                 </p>
             </div>
         </div>
     </main>
 </body>
+
 </html>
